# MS-OVBA-Compression

./: Bug.md  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
MS_OVBA_Compression/: compressor.py  decompressor.py  helpers.py
src/MS_OVBA_Compression/: __init__.py  decompressor.py
src/ms_ovba_compression/: compressor.py  decompressor.py  helpers.py  ms_ovba.py
tests/: test_compressor.py  test_decompressor.py  test_helpers.py
tests/functional/: test_compression.py
