[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_ovba_compression"
version = "0.2.0"
authors = [
  { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
]
description = "Compress and decompress Microsoft Office VBA data streams."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Beakerboy/MS-OVBA-Compression"
"Bug Tracker" = "https://github.com/Beakerboy/MS-OVBA-Compression/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
